2009-11-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c(decorateType,CAST): fold literal pointers
	* src/SDCCdflow.c(usedInRemaining),
	* src/SDCCicode.c(geniCodeCall): fix for non-symbol values
	* src/SDCCsymt.c(isConstant): reverted, make literals const instead
	* src/SDCCval.c(constFloatVal, constFixed16x16Val, constVal, constCharVal,
	  strVal): make literals const
	  (valForArray),
	  (valForStructElem): fixed bug 1928022 with folded literal pointers
	* src/ds390/gen.c(genCall),
	* src/hc08/gen.c(genCall),
	* src/mcs51/gen.c(genCall),
	* src/z80/gen.c(emitCall): handle literal function pointers
	* support/regression/tests/bug1928022.c: new, added

2009-10-30 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/include/mcs51/P89LPC922.h, device/include/mcs51/P89LPC932.h,
	  device/include/mcs51/p89lpc938.h: fixed bug 2889428, double definition
	  for CMP1 and CMP2.
	* device/include/mcs51/p89lpc925.h: for consistency with the other lpc
	  files, renamed CMP1b and CMP2b to CMP_1 and CMP_2.

2009-10-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c(newIfxNode): fixed bug 2887512
	  (decorateType, '='): use different error for function pointers
	* src/SDCCglue.c(printIvalFuncPtr): fixed bug 2806238, don't throw away
	  function pointer value just like that
	  (printIval): use different error for function pointers
	* src/SDCCsymt.c(compareFuncType, compareType): new function to compare
	  function pointer types
	  (isConstant): treat literals as constant too to warn before bug 2887512

2009-10-26 Borut Razem <borut.razem AT siol.net>

	* doc/cdbfileformat.lyx, doc/sdccman.lyx, doc/test_suite_spec.lyx:
	  converted to LyX 1.6.4 (\lyxformat 345) format

2009-10-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/link/mcs51/lkarea.c(lnkarea2): fixed bug 2839083

2009-10-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c(decorateType): also set OCLS for PTR_OP, fixed bug 2823963
	* src/SDCCast.h: cosmetic changes